Reformating the code and removing unnecessary test data.